Bug #74955: When loading folders, preset the msg hdr cache table size to eliminate the need of allocating and de-allocating tables. Same thing for users of nsUInt32Array and nsUInt8Array. r=bienvenu, sr=sspitzer.